Update: Brutalist AI Trainer - sync to GitHub

--- a/client/index.html
+++ b/client/index.html
@@ -4,6 +4,18 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1" />
 
+    <!-- PWA Manifest -->
+    <link rel="manifest" href="/manifest.json" />
+
+    <!-- iOS Meta Tags -->
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent" />
+    <meta name="apple-mobile-web-app-title" content="IRON_AI" />
+    <link rel="apple-touch-icon" href="/favicon.png" />
+
+    <!-- Theme Color -->
+    <meta name="theme-color" content="#ccff33" />
+
     <meta property="og:title" content="IRON_AI | The Raw Fitness Intelligence" />
     <meta property="og:description" content="AI-driven fitness training. No bullshit. Pure performance. Brutally effective." />
     <meta property="og:type" content="website" />
